<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="uz.smartmuslim.wordsquiz.data.source.local.entity.Product" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.EditScreen">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/cl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:background="@drawable/back_style_card"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView

                android:id="@+id/back"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7"
                app:tint="@color/white" />

            <TextView

                android:id="@+id/list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/lato"
                android:text="@string/add_task"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toRightOf="@id/back"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7" />


            <Button

                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:backgroundTint="#0E2B42"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="Saqlash"
                android:textAllCaps="false"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl"
            app:layout_constraintVertical_bias="0">

            <androidx.core.widget.NestedScrollView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBackground"
                    android:padding="@dimen/_10sdp"
                    tools:context=".ui.add.AddFragment">
                    <ImageView

                        android:id="@+id/barcodeImage"
                        android:layout_width="242dp"
                        android:layout_height="71dp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:contentDescription="TO DO"
                        android:src="@drawable/barcode"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0" />

                    <TextView
                        android:id="@+id/textInputBarcodeNumber"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:textSize="@dimen/_16sdp"
                        android:fontFamily="serif-monospace"
                        android:textColor="@color/black"
                        android:layout_marginEnd="@dimen/_10sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/barcodeImage"
                        app:layout_constraintVertical_bias="0">

                    </TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputProductName"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:hint="@string/productName"
                        android:textColorHint="#A3A1A6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputBarcodeNumber">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/productName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:inputType="text"
                            android:textColor="@color/colorText" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputProductCount"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:hint="@string/productCount"
                        android:textColorHint="#A3A1A6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputProductName">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/productCount"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:inputType="number"
                            android:textColor="@color/colorText" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputProductArriveCost"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:hint="@string/productArriveCost"
                        android:textColorHint="#A3A1A6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputProductCount">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/productArriveCost"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:inputType="numberSigned"
                            android:textColor="@color/colorText" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputProductPercent"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:hint="@string/productPercent"
                        android:textColorHint="#A3A1A6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputProductArriveCost">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/productPercent"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:inputType="numberSigned"
                            android:textColor="@color/colorText" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/textInputProductSaleCost"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center_vertical"
                        android:background="@drawable/back_style"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputProductPercent">

                        <LinearLayout

                            android:gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView

                                android:id="@+id/saleCost"
                                android:textSize="@dimen/_13sdp"
                                android:hint="@string/productSaleCost"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>


                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputProductTerm"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:hint="@string/productTerm"
                        android:textColorHint="#A3A1A6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputProductSaleCost">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/productTerm"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:inputType="text"
                            android:textColor="@color/colorText" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputProductFirm"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:hint="@string/productFirm"
                        android:textColorHint="#A3A1A6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputProductTerm">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/productFirm"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:inputType="text"
                            android:textColor="@color/colorText" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.card.MaterialCardView

                        android:id="@+id/textInputProductArriveTerm"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?selectableItemBackground"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputProductFirm"
                        app:layout_constraintVertical_bias="0">

                        <LinearLayout

                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView

                                android:id="@+id/productArriveTerm"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="@string/productArriveTerm"
                                android:inputType="text"
                                android:textColor="#A18AC0"
                                android:textColorHint="#A3A1A6"
                                android:layout_marginStart="@dimen/_12sdp"
                                android:textSize="@dimen/_12sdp" />

                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp"
                        app:layout_constraintTop_toBottomOf="@id/textInputProductArriveTerm" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>