<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".ui.ListScreen">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/cl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:background="@drawable/back_style_card"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView

                android:id="@+id/back"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7"
                app:tint="@color/white" />

            <TextView

                android:id="@+id/list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/lato"
                android:text="Texnik qismlar ro'yxati"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toRightOf="@id/back"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7" />


            <ImageView

                android:id="@+id/sort"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_sort_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7"
                app:tint="@color/white" />

            <ImageView

                android:id="@+id/delete"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/deleteForever"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7"
                app:tint="@color/white" />

            <ImageView

                android:id="@+id/deleteForever"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_delete_forever"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/sort"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7"
                app:tint="@color/white" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout

            android:id="@+id/linear"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_width="@dimen/_280sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="@dimen/_40sdp">

            <EditText

                android:id="@+id/searchText"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/_10sdp"
                android:textColorHint="#959191"
                android:background="@drawable/back_style_searching"
                android:hint="Qidirish"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <TextView
            android:id="@+id/date"
            style="@style/textBase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="16dp"
            android:textAlignment="center"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_statistic"
            tools:text="Date" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_statistic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/colorCard"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear"
            app:strokeColor="@color/colorBorder"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textBase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_task" />

                    <TextView
                        android:id="@+id/total_task"
                        style="@style/textTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="10" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textBase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/completed" />

                    <TextView
                        android:id="@+id/completed"
                        style="@style/textTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="10" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingHorizontal="8dp"
            android:paddingBottom="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date"
            tools:listitem="@layout/item_product" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_task_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#2E2E2E"
            android:contentDescription="@string/add_task"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add"
            app:tint="@android:color/white" />

        <ImageView
            android:id="@+id/no_data_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/empty"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/rv"
            app:layout_constraintEnd_toEndOf="@id/rv"
            app:layout_constraintStart_toStartOf="@id/rv"
            app:layout_constraintTop_toTopOf="@id/rv"
            app:srcCompat="@drawable/ic_undraw_empty" />

        <TextView
            android:id="@+id/no_data_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/no_data"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/no_data_image"
            app:layout_constraintStart_toStartOf="@+id/no_data_image"
            app:layout_constraintTop_toBottomOf="@+id/no_data_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>